<resources>

    <!--General, ProductActivity-->
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">No products</string>
    <string name="empty_view_subtitle_text">Tap the right bottom button to add an item.</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="action_sale1">- 1</string>

    <!--Detail-->
    <string name="product_overview">Product details</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_product_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_sale">Sale</string>
    <string name="unit_product_price">$</string>
    <string name="unknown_price">Unknown price</string>
    <string name="unknown_quantity">Unknown quantity</string>
    <string name="unknown_sale">Unknown number of saled</string>

    <!--Dialog messages, buttons-->
    <string name="action_save">Save product</string>
    <string name="action_delete">Delete product</string>
    <string name="unsaved_changes_dialog_msg">Unsaved changes, discard?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--CRUD messages-->
    <string name="editor_delete_product_failed">Ooops, error. No products deleted.</string>
    <string name="editor_delete_product_successful">Product successfully deleted!</string>
    <string name="editor_update_product_successful">Product successfully updated!</string>
    <string name="editor_update_product_failed">Error, update failed!</string>
    <string name="editor_insert_product_successful">Product successfully inserted!</string>
    <string name="editor_insert_product_failed">Error, product was not inserted!</string>

    <!--EditorActivity-->
    <string name="category_price">Price</string>
    <string name="hint_product_sale">Sale</string>
    <string name="unit_product_quantity">units</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_initial_quantity">Initial quantity</string>
    <string name="category_initial_quantity">Initial quantity</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="editor_activity_title_new_product">New product</string>

    <!--Picture related-->
    <string name="category_product_picture">Product picture</string>
    <string name="picture_cola">Coca-Cola</string>
    <string name="picture_pepsi">Pepsi</string>
    <string name="picture_unknown">Unknown</string>

    <!--Order related-->
    <string name="need_to_declare_items_number_to_order_msg">You need to declare number of items to make an order</string>
    <string name="need_to_declare_grater_number_msg">You need to declare a number grater than 0</string>
    <string name="successfull_order">Successfull order!</string>
    <string name="order_from_supplier">Order</string>
    <string name="how_many_items">Number of items to order</string>
    <string name="category_order_from_supplier">Order from supplier</string>

    <!--Sale related-->
    <string name="need_no_more_items_for_sale">Sorry, there are no more items left for sale</string>
    <string name="successfully_sold_1_item">Successfully sold 1 item!</string>
    <string name="failure_selling_1_item">Oooops, something went wrong, could not sell the item</string>
    <string name="subtract_sign">- 1</string>
    <string name="subtract_one">- 1</string>
    <string name="add_one">+ 1</string>
    <string name="quantity_cant_be_below_zero">Quantity cannot have value below 0 !</string>
    <string name="empty_values_msg">Product unsaved. You need to declare all values and take a picture.</string>
    <string name="ok">OK</string>
    <string name="take_picture">Take picture</string>
    <string name="tap_image_to_create_new">Tap the image to set a new one!</string>

</resources>
